--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,11 @@
 .container {
-  padding: 0 2rem;
+  display: block;
+  position: relative;
 }
 
 .main {
+  display: block;
+  position: relative;
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
